# LearnOpenGL

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  build_windows.sh
.github/: FUNDING.yml
cmake/modules/: FindASSIMP.cmake  FindASSIMP.cmake~  FindFreeType2.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLFW3.cmake~  FindGLM.cmake  FindGLM.cmake~  FindSOIL.cmake  FindSOIL.cmake~
configuration/: root_directory.h.in  visualstudio.vcxproj.user.in
docker/: .dockerignore  Dockerfile  ide.sh
includes/: SOIL.c  SOIL.h  image_DXT.c  stb_image.h  stb_image_aug.c  stb_image_aug.h
includes/assimp/: DefaultLogger.hpp  Exporter.hpp  IOStream.hpp  IOSystem.hpp  Importer.hpp  LogStream.hpp  Logger.hpp  NullLogger.hpp  ProgressHandler.hpp  ai_assert.h  anim.h  camera.h  cexport.h  cfileio.h  cimport.h  color4.h  color4.inl  config.h  defs.h  importerdesc.h  light.h  material.h  material.inl  matrix3x3.h  matrix3x3.inl  matrix4x4.h  matrix4x4.inl  mesh.h  metadata.h  postprocess.h  quaternion.h  quaternion.inl  scene.h  texture.h  types.h  vector2.h  vector2.inl  vector3.h  vector3.inl  version.h
includes/assimp/Compiler/: pushpack1.h
includes/freetype/: ftimage.h
includes/freetype/internal/: ftobjs.h
includes/glad/: glad.h
includes/glm/: CMakeLists.txt  common.hpp  ext.hpp  fwd.hpp  geometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp
includes/glm/core/: _swizzle.hpp  func_common.hpp  func_common.inl  func_exponential.hpp  func_exponential.inl  func_geometric.hpp  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_noise.hpp  func_packing.hpp  func_trigonometric.hpp  func_vector_relational.hpp  setup.hpp  type_half.inl  type_int.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
includes/glm/detail/: _fixes.hpp  _vectorize.hpp  func_common.inl  func_geometric_simd.inl  func_integer.inl  func_matrix.hpp  func_matrix_simd.inl  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  glm.cpp  precision.hpp  qualifier.hpp  setup.hpp  type_half.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec.hpp  type_vec1.hpp  type_vec1.inl  type_vec2.hpp  type_vec2.inl  (+6 more)
includes/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.inl  matrix_transform.inl  quaternion_common.hpp  quaternion_common.inl  quaternion_exponential.inl  quaternion_trigonometric.inl  scalar_common.hpp  scalar_common.inl  scalar_constants.hpp  scalar_constants.inl  scalar_int_sized.hpp  scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_common.inl  vector_double1.hpp  vector_int1_precision.hpp  vector_int2_precision.hpp  vector_int3_precision.hpp  vector_int4_precision.hpp  (+7 more)
includes/irrKlang/: ik_ESoundEngineOptions.h  ik_ESoundOutputDrivers.h  ik_EStreamModes.h  ik_IAudioRecorder.h  ik_IAudioStream.h  ik_IAudioStreamLoader.h  ik_IFileFactory.h  ik_IFileReader.h  ik_IRefCounted.h  ik_ISound.h  ik_ISoundDeviceList.h  ik_ISoundEffectControl.h  ik_ISoundEngine.h  ik_ISoundMixedOutputReceiver.h  ik_ISoundSource.h  ik_ISoundStopEventReceiver.h  ik_IVirtualRefCounted.h  ik_SAudioStreamFormat.h  ik_irrKlangTypes.h  ik_vec3d.h  irrKlang.h
includes/learnopengl/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  camera.h  entity.h  filesystem.h  mesh.h  model.h  model_animation.h  shader.h  shader_c.h  shader_m.h  shader_s.h  shader_t.h
lib/: SOIL.lib  assimp.lib  freetype.lib  glfw3.lib  irrKlang.lib
resources/fonts/: SIL Open Font License.txt
resources/levels/: three.lvl
src/: glad.c
src/1.getting_started/1.hello_window/: CMakeLists.txt  CMakeLists.txt~  hellowindow2.cpp  shader.frag  shader.vs
src/1.getting_started/3.shaders/: CMakeLists.txt  basic.frag  basic.vs  shaders-using-object.cpp
src/1.getting_started/4.textures/: CMakeLists.txt  CMakeLists.txt~  texture.frag  texture.vs  textures_combined.cpp
src/1.getting_started/5.transformations/: CMakeLists.txt  CMakeLists.txt~  transform.vs  transformations.cpp
src/1.getting_started/7.camera/: CMakeLists.txt  CMakeLists.txt~  camera_with_class.cpp  coordinate_systems.vs
src/2.lighting/1.colors/: 1.colors.fs  1.lamp.fs  1.lamp.vs  CMakeLists.txt  CMakeLists.txt~  colors.cpp  colors.frag  colors_scene.cpp  lamp.frag
src/2.lighting/3.materials/: CMakeLists.txt  CMakeLists.txt~  materials.cpp  materials.frag
src/2.lighting/4.lighting_maps/: CMakeLists.txt  CMakeLists.txt~  lighting_maps.frag  lighting_maps.vs  lighting_maps_specular.cpp
src/2.lighting/5.light_casters/: CMakeLists.txt  CMakeLists.txt~  light_casters.frag  light_casters_spotlight_soft.cpp
src/3.model_loading/1.model_loading/: 1.model_loading.fs  1.model_loading.vs  CMakeLists.txt  CMakeLists.txt~  model_loading.cpp  model_rendered.cpp  shader.frag  shader.vs
src/4.advanced_opengl/1.depth_testing/: CMakeLists.txt  CMakeLists.txt~  depth_testing.frag  depth_testing_func.cpp
src/4.advanced_opengl/10.instancing/: CMakeLists.txt  instancing_asteroids_instanced.cpp  planet.frag  planet.vs
src/4.advanced_opengl/3.1.blending_discard/: 3.1.blending.fs  3.1.blending.vs  CMakeLists.txt  CMakeLists.txt~  blending_discard.cpp  blending_discard.frag
src/4.advanced_opengl/5.framebuffers/: CMakeLists.txt  CMakeLists.txt~  framebuffers.frag  framebuffers_screen.frag  framebuffers_screen.vs  framebuffers_screen_texture.cpp
src/4.advanced_opengl/8.advanced_glsl/: CMakeLists.txt  CMakeLists.txt~  advanced_glsl_uniform_buffer_objects.cpp  blue.frag  red.frag  yellow.frag
(+582 files in other folders)
